<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="@dimen/_4sdp">

    <!-- 1. MONSTER MESSAGE (Left Aligned) -->
    <LinearLayout
        android:id="@+id/llMonsterMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginEnd="@dimen/_40sdp"
        android:background="@drawable/bg_chat_monster"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvMonsterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_sleep"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- 2. USER MESSAGE (Right Aligned) -->
    <LinearLayout
        android:id="@+id/llUserMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="@dimen/_40sdp"
        android:background="@drawable/bg_chat_user"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvUserText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/why_are_words_and_timing_so_important"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- 3. TYPING INDICATOR (Monster is typing "...") -->
    <LinearLayout
        android:id="@+id/llTypingIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@drawable/bg_chat_monster"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:visibility="visible">

        <TextView
            android:id="@+id/textAnimate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot_three"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>