<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_background"
    tools:context=".ui.afterLogin.MonsterStartCallFragment">

    <!-- Blurred Background (Simulated with Alpha and Overlay) -->

    <ImageView
        android:id="@+id/ivBackgroundBlur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Dark Overlay to ensure text readability -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <!-- Monster Avatar with Circular Neon Border -->
    <FrameLayout
        android:id="@+id/flAvatarContainer"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_110sdp"
        android:layout_marginTop="@dimen/_100sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_neon_circle" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="@dimen/_55sdp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/ivMonsterAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/app_logo" />
        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <!-- Caller Name and Status -->
    <TextView
        android:id="@+id/tvCallerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/default_caller_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flAvatarContainer" />

    <TextView
        android:id="@+id/tvCallStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/status_calling"
        android:textColor="#E0E0E0"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCallerName" />

    <!-- Incoming Call Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_60sdp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Accept Button -->
        <ImageButton
            android:id="@+id/btnAcceptCall"
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_65sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:background="@drawable/bg_circle_green"
            android:contentDescription="@string/btn_accept"
            android:padding="@dimen/_15sdp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_call"
            app:tint="@color/white" />

        <!-- Decline Button -->
        <ImageButton
            android:id="@+id/btnDeclineCall"
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_65sdp"
            android:background="@drawable/bg_circle_red"
            android:contentDescription="@string/btn_decline"
            android:padding="@dimen/_15sdp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_end_call"
            app:tint="@color/white" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

