<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/common_background"
    tools:context=".ui.afterLogin.PrankCallEndFragment">
    <!--    &lt;!&ndash; 1. Blurred Monster Background &ndash;&gt;-->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/ivBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/common_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- 2. Caller Name -->
        <TextView
            android:id="@+id/tvCallerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sarah_jenkins"
            android:textColor="@color/white"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.22" />

        <!-- 3. Call Status -->
        <TextView
            android:id="@+id/tvCallStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/call_end"
            android:textColor="#E0E0E0"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCallerName" />

        <!-- 4. Custom Return Button -->
        <FrameLayout
            android:id="@+id/btnReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <!-- The decorative purple background image -->
            <ImageView
                android:layout_width="@dimen/_180sdp"
                android:layout_height="@dimen/_55sdp"
                android:scaleType="fitXY"
                android:src="@drawable/select_feature" />

            <!-- Button Text inside the frame -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ret"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />
        </FrameLayout>

    <include
        android:id="@+id/native_ads_3"
        layout="@layout/native_ads_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>