<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_background"
    tools:context=".ui.prelogin.FemaleAgeFragment">

    <FrameLayout
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBackFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/ic_back" />

    </FrameLayout>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintTop_toBottomOf="@id/ivBack">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_20sdp">

            <TextView
                android:id="@+id/tvMainTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/creepster_regular"
                android:gravity="center"
                android:text="@string/monster_prank_call"
                android:textColor="#9D4EDD"
                android:textSize="@dimen/_36ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.3"
                android:text="@string/scary_chat"
                android:textColor="#E0E0E0"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMainTitle" />


            <LinearLayout
                android:id="@+id/llSelectAgeHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSubtitle">

                <View
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_7sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:background="@drawable/view_one" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_age"
                    android:textColor="#9D4EDD"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_7sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:background="@drawable/view_two" />
            </LinearLayout>


            <!-- Row 1: 12-15 and 20-40 -->
            <LinearLayout
                android:id="@+id/llRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/llSelectAgeHeader">

                <LinearLayout
                    android:id="@+id/btnAge1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/age_12_15"
                            android:scaleType="centerCrop"
                            android:src="@drawable/female_twelve_to_twenty" />


                    </FrameLayout>

                    <ImageView
                        android:id="@+id/ivAge1Indicator"
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:contentDescription="@null"
                        android:src="@drawable/bg_neon_circle"
                        app:tint="#9D4EDD" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnAge2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/age_20_40"
                            android:scaleType="centerCrop"
                            android:src="@drawable/female_twenty_to_forty" />


                    </FrameLayout>

                    <ImageView
                        android:id="@+id/ivAge2Indicator"
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:contentDescription="@null"
                        android:src="@drawable/bg_neon_circle"
                        app:tint="#9D4EDD" />
                </LinearLayout>
            </LinearLayout>

            <!-- Row 2: 60+ -->
            <include
                android:id="@+id/native_ads_3"
                layout="@layout/native_ads_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@+id/llRow1" />



            <LinearLayout
                android:id="@+id/btnAge3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/native_ads_3">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/age_60_plus"
                        android:scaleType="centerCrop"
                        android:src="@drawable/female_age_sixty" />


                </FrameLayout>

                <ImageView
                    android:id="@+id/ivAge3Indicator"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:contentDescription="@null"
                    android:src="@drawable/bg_neon_circle"
                    app:tint="#9D4EDD" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- The decorative purple background image -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55sdp"
            android:scaleType="fitXY"
            android:src="@drawable/select_feature" />

        <!-- Button Text inside the frame -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/next_text"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>